--- a/demo/index.html
+++ b/demo/index.html
@@ -8,7 +8,7 @@
     <script src="http://g.alicdn.com/cn/bui/1.0.4/jquery-1.8.1.js"></script>
 </head>
 <body>
-<div id="J_root" data-type="17"></div>
+<div id="J_root"></div>
 </body>
 <script src="../build/userSetting.js"></script>
 </html>
